--- a/UI/simple.ui
+++ b/UI/simple.ui
@@ -99,18 +99,13 @@ font: 700 9pt &quot;Overpass&quot;;</string>
         <widget class="QWidget" name="verticalLayoutWidget">
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
-           <widget class="QLabel" name="ImageLabel">
+           <widget class="QGraphicsView" name="ImageLabel">
             <property name="styleSheet">
              <string notr="true">background-color:rgb(57, 50, 62);
 border-radius:5px;
 border-style:solid;
 border-width:1px;
-border-color:none;
-color:rgb(255, 255, 255);
-font: 500 9pt &quot;Overpass&quot;;</string>
-            </property>
-            <property name="text">
-             <string>Image</string>
+border-color:white;</string>
             </property>
            </widget>
           </item>
